Fix unselecting selected route sel not showing all buses in stop, feedback btn

--- a/css/index.css
+++ b/css/index.css
@@ -430,7 +430,7 @@ html, body {
     color: rgb(242, 242, 242)
 }
 
-.bus-star, .bus-share {
+.bus-star, .bus-share, .bus-comment {
     color: var(--theme-color);
     background-color: var(--theme-bg);
     font-size: 1.7rem;
